[package]
name = "createfi-blockchain"
version = "0.1.0"
edition = "2021"
description = "CREATEFI - Next-generation DeFi blockchain platform built in Rust"
authors = ["CREATEFI Team"]
license = "MIT"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["fu
ive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Cryptography and hashing
sha2 = "0.10"
sha3 = "0.10"
ed25519-dalek = "2.0"
secp256k1 = "0.28"
rand = "0.8"

# Networking and HTTP
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = { version = "1.0", features = ["full"] }
tungstenite = "0.20"
tokio-tungstenite = "0.20"

# Database and storage (simplified)
sled = "0.34"

# Async runtime
futures = "0.3"
async-trait = "0.1"

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.13"
toml = "0.8"

# Utilities
hex = "0.4"
base64 = "0.21"
url = "2.4"
regex = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true 